--- a/sass/site/header/_search.scss
+++ b/sass/site/header/_search.scss
@@ -2,8 +2,7 @@
 	background: rgba(255, 255, 255, 0.97);
 	display: none;
 	left: 0;
-	position: absolute;
-	top: 61px;
+	position: fixed;
 	z-index: 10;
 
 	.container {
