--- a/style.css
+++ b/style.css
@@ -1475,7 +1475,7 @@ a {
       display: table; }
     .header-design-2 #masthead .top-bar {
       border-top: 1px solid #ebebeb; }
-    .home.header-design-2 #masthead .top-bar {
+    .homepage-has-slider.header-design-2 #masthead .top-bar {
       border-bottom: none; }
     .sticky-menu:not(.top-bar-out) #masthead .top-bar {
       position: relative;
@@ -1577,9 +1577,7 @@ a {
           float: none;
           margin: 0 0 4em;
           width: 100% !important; } }
-  .home #masthead {
-    border-bottom: none;
-    margin-bottom: 60px; }
+  .home #masthead,
   .archive #masthead,
   .search #masthead {
     margin-bottom: 60px; }
