--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1003,9 +1003,10 @@
           width: 100% !important; } }
     .woocommerce-cart table.shop_table td.actions .coupon input.input-text {
       border-radius: 0;
-      height: 36px;
+      box-sizing: border-box;
       font-size: 13px;
-      padding: 18px 15px;
+      min-height: 38px;
+      padding: 5px 15px;
       width: 200px !important; }
       @media (max-width: 768px) {
         .woocommerce-cart table.shop_table td.actions .coupon input.input-text {
