--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -98,7 +98,7 @@
 		@at-root .header-design-4 & {
 			display: inline-block;
 			padding: $masthead__padding/2 0;
-			text-align: left;
+			float: left;
 
 			.site-title {
 				@include font-size(2.5);
