--- a/style.css
+++ b/style.css
@@ -1540,7 +1540,7 @@ a {
     .header-design-4 #masthead .site-branding {
       display: inline-block;
       padding: 30px 0;
-      text-align: left; }
+      float: left; }
       .header-design-4 #masthead .site-branding .site-title {
         font-size: 40px;
         font-size: 2.5rem;
