--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -215,7 +215,7 @@
 					border-radius: 0;
 					box-sizing: border-box;
 					font-size: 13px;
-					min-height: 38px; 
+					min-height: 38px;
 					padding: 5px 15px;
 					width: 200px !important;
 
@@ -367,6 +367,12 @@
 
 		.widget_shopping_cart_content {
 			padding: 20px 20px 30px;
+
+			.product_list_widget {
+				max-height: 55vh;
+				overflow-y: auto;
+				padding: 2px 0;
+			}
 		}
 
 		.shopping-cart-link {
@@ -566,9 +572,9 @@
 			a {
 				padding: 12px 1.5em;
 				width: 49%;
-				
+
 				&:last-of-type {
-					margin-right: 0; 
+					margin-right: 0;
 				}
 
 				&.wc-forward:first-of-type {
