--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1080,6 +1080,10 @@
     z-index: 99999; }
   .main-navigation .shopping-cart .widget_shopping_cart_content {
     padding: 20px 20px 30px; }
+    .main-navigation .shopping-cart .widget_shopping_cart_content .product_list_widget {
+      max-height: 55vh;
+      overflow-y: auto;
+      padding: 2px 0; }
   .main-navigation .shopping-cart .shopping-cart-link {
     line-height: 1;
     position: relative;
