Add scroll to top button

--- a/sass/navigation/_navigation.scss
+++ b/sass/navigation/_navigation.scss
@@ -12,3 +12,8 @@
 ## Breadcrumbs
 --------------------------------------------------------------*/
 @import "breadcrumbs";
+
+/*--------------------------------------------------------------
+## Scroll to Top
+--------------------------------------------------------------*/
+@import "scroll-to-top";
