--- a/sass/navigation/_scroll-to-top.scss
+++ b/sass/navigation/_scroll-to-top.scss
@@ -8,7 +8,7 @@
 	padding-top: 17px;
 	position: fixed;
 	right: 20px;
-  	transform: scale(0, 0);
+  	transform: scale(0);
   	transition: .3s;
 	text-align: center;
 	width: 50px; 
