--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -1,19 +1,17 @@
 #masthead {
 	border-bottom: 1px solid $color__background-hr-dark;
 	margin-bottom: $masthead__bottom-margin;
-	z-index: 101;
-    	position: relative;
 
 	@at-root .header-design-2 & {
 		border-bottom: none;
 	}
 
-	// Sticky-menu
+	// Sticky-menu.
 	.sticky-bar {
 		background: #fff;
 		@include clearfix;
 		position: relative;
-		z-index: 25;
+		z-index: 101;
 
 		@at-root {
 			.sticky-menu:not( .sticky-bar-out ) & {
@@ -90,8 +88,8 @@
 			}
 		}
 
-        a, img {
-            display: block;
+        a {
+			display: inline-block;
         }
 
 		.site-description {
