--- a/style.css
+++ b/style.css
@@ -1495,15 +1495,13 @@ a {
 --------------------------------------------------------------*/
 #masthead {
   border-bottom: 1px solid #ebebeb;
-  margin-bottom: 80px;
-  z-index: 101;
-  position: relative; }
+  margin-bottom: 80px; }
   .header-design-2 #masthead {
     border-bottom: none; }
   #masthead .sticky-bar {
     background: #fff;
     position: relative;
-    z-index: 25; }
+    z-index: 101; }
     #masthead .sticky-bar::after {
       clear: both;
       content: "";
@@ -1566,8 +1564,8 @@ a {
       #masthead .site-branding .site-title a {
         color: #2d2d2d;
         text-decoration: none; }
-    #masthead .site-branding a, #masthead .site-branding img {
-      display: block; }
+    #masthead .site-branding a {
+      display: inline-block; }
     #masthead .site-branding .site-description {
       font-size: 14.9328px;
       font-size: 0.9333rem;
