Code styling tweaks

--- a/style.css
+++ b/style.css
@@ -1886,8 +1886,8 @@ a {
 .blog-layout-grid .archive-entry {
   border-bottom: none;
   display: inline-block;
-  margin-left: -4px;
   margin-right: 2%;
+  margin-left: -4px;
   padding-bottom: 0;
   vertical-align: top;
   width: 32%; }
@@ -1985,8 +1985,8 @@ a {
 
 .blog-layout-alternate .archive-entry:nth-child(even) .entry-content {
   float: left;
-  margin-left: 0;
-  margin-right: 5%; }
+  margin-right: 5%;
+  margin-left: 0; }
 
 @media (max-width: 640px) {
   .blog-layout-alternate .archive-entry {
@@ -1997,8 +1997,8 @@ a {
       width: 100%; }
     .blog-layout-alternate .archive-entry .entry-content {
       float: none;
-      margin-left: 0;
       margin-right: 0;
+      margin-left: 0;
       width: 100%; } }
 
 /*--------------------------------------------------------------
