--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -176,6 +176,7 @@
 		border-bottom: none;
 		float: left;
 		margin-right: 3.5%;
+		margin-bottom: 53px; 
 		padding-bottom: 0;
 		vertical-align: top;
 		width: 31%;	
@@ -202,7 +203,7 @@
 		}
 
 		.entry-thumbnail {
-			margin-bottom: 17px;
+			margin: 0 auto 17px;
 			position: relative;
 
 			.entry-cats {
@@ -222,6 +223,11 @@
 				}
 			}
 		}
+
+		p:only-of-type,
+		p:last-of-type {
+			margin-bottom: 0;
+		}					
 
 		.more-link {
 		    display: block;
@@ -244,7 +250,9 @@
     			
     			&:after {
     				content: '\279E';
-    				margin-left: 7px; 
+   					position: relative;
+    				right: -7px;
+    				top: 1px;
     			}
 		    }
 		}		
