--- a/style.css
+++ b/style.css
@@ -1887,6 +1887,7 @@ a {
   border-bottom: none;
   float: left;
   margin-right: 3.5%;
+  margin-bottom: 53px;
   padding-bottom: 0;
   vertical-align: top;
   width: 31%; }
@@ -1914,7 +1915,7 @@ a {
     margin: 10px 0 9px;
     text-align: left; }
   .blog-layout-grid .archive-entry .entry-thumbnail {
-    margin-bottom: 17px;
+    margin: 0 auto 17px;
     position: relative; }
     .blog-layout-grid .archive-entry .entry-thumbnail .entry-cats {
       left: 12px;
@@ -1929,6 +1930,9 @@ a {
         letter-spacing: .1em;
         padding: 7px 9px;
         text-transform: uppercase; }
+  .blog-layout-grid .archive-entry p:only-of-type,
+  .blog-layout-grid .archive-entry p:last-of-type {
+    margin-bottom: 0; }
   .blog-layout-grid .archive-entry .more-link {
     display: block;
     color: #24c48a;
@@ -1946,7 +1950,9 @@ a {
       padding: 0; }
       .blog-layout-grid .archive-entry .more-link .more-text:after {
         content: '\279E';
-        margin-left: 7px; }
+        position: relative;
+        right: -7px;
+        top: 1px; }
 
 .blog-layout-alternate .archive-entry::after {
   clear: both;
