Neaten mini-cart empty message display

--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -414,6 +414,10 @@
 			.mini_cart_item a {
 				white-space: normal;
 			}
+
+			.woocommerce-mini-cart__empty-message {
+				margin-bottom: -5px;
+			}
 		}
 	}
 }
